tests/ui/dyn-keyword/trait-dyn-in-qualified-path-for-object-unsafe-trait.stderr
error[E0038]: the trait `Trait` cannot be made into an object
  --> $DIR/trait-dyn-in-qualified-path-for-object-unsafe-trait.rs:3:6
   |
LL | impl dyn Trait {
   |      ^^^^^^^^^ `Trait` cannot be made into an object
   |
note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $DIR/trait-dyn-in-qualified-path-for-object-unsafe-trait.rs:1:14
   |
LL | trait Trait: Sized {}
   |       -----  ^^^^^ ...because it requires `Self: Sized`
   |       |
   |       this trait cannot be made into an object...
   = help: only type `()` implements the trait, consider using it directly instead

error[E0038]: the trait `Trait` cannot be made into an object
  --> $DIR/trait-dyn-in-qualified-path-for-object-unsafe-trait.rs:4:18
   |
LL |     fn function(&self) {}
   |                  ^^^^ `Trait` cannot be made into an object
   |
note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $DIR/trait-dyn-in-qualified-path-for-object-unsafe-trait.rs:1:14
   |
LL | trait Trait: Sized {}
   |       -----  ^^^^^ ...because it requires `Self: Sized`
   |       |
   |       this trait cannot be made into an object...
   = help: only type `()` implements the trait, consider using it directly instead

error[E0038]: the trait `Trait` cannot be made into an object
  --> $DIR/trait-dyn-in-qualified-path-for-object-unsafe-trait.rs:10:27
   |
LL |     <dyn Trait>::function(&());
   |                           ^^^ `Trait` cannot be made into an object
   |
note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $DIR/trait-dyn-in-qualified-path-for-object-unsafe-trait.rs:1:14
   |
LL | trait Trait: Sized {}
   |       -----  ^^^^^ ...because it requires `Self: Sized`
   |       |
   |       this trait cannot be made into an object...
   = help: only type `()` implements the trait, consider using it directly instead
   = note: required for the cast from `&()` to `&(dyn Trait + 'static)`

error[E0038]: the trait `Trait` cannot be made into an object
  --> $DIR/trait-dyn-in-qualified-path-for-object-unsafe-trait.rs:10:6
   |
LL |     <dyn Trait>::function(&());
   |      ^^^^^^^^^ `Trait` cannot be made into an object
   |
note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $DIR/trait-dyn-in-qualified-path-for-object-unsafe-trait.rs:1:14
   |
LL | trait Trait: Sized {}
   |       -----  ^^^^^ ...because it requires `Self: Sized`
   |       |
   |       this trait cannot be made into an object...
   = help: when writing `<dyn Trait>::function` you are requiring `Trait` be "object safe", which it isn't
help: specify the specific `impl` for type `()` to avoid requiring "object safety" from `Trait`
   |
LL |     <() as Trait>::function(&());
   |      ~~~~~

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0038`.
